# labs

./: .gitignore
auto_version_increment/: auto_increment.bat  increment.lua  version.hpp
lua5.4.6_for_msvc/src/: CMakeLists.txt
winsock/: win_client.cpp  win_server.cpp
xlib/: xteste.cpp
